[gd_scene load_steps=12 format=3 uid="uid://b2qbmyypnnpmy"]

[ext_resource type="Script" uid="uid://dt1a2nd6b8oob" path="res://scripts/room_config_form.gd" id="1_bgtom"]
[ext_resource type="Theme" uid="uid://cdva8136niyjv" path="res://theme/theme.tres" id="2_7shhj"]
[ext_resource type="PackedScene" uid="uid://upsj8hq04i0s" path="res://scenes/room_config/form_heading.tscn" id="2_r5ufs"]
[ext_resource type="PackedScene" uid="uid://bn5k1xeydqtad" path="res://scenes/room_config/field_bool.tscn" id="3_bcw72"]
[ext_resource type="PackedScene" uid="uid://dhuv0i3csm0jw" path="res://scenes/room_config/field_float.tscn" id="3_qr8kv"]
[ext_resource type="PackedScene" uid="uid://hma4qpwg5r0a" path="res://scenes/room_config/edit_noise_form.tscn" id="5_p11vx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgtom"]
bg_color = Color(0.7581252, 0.606366, 0.62051076, 1)
shadow_size = 2
shadow_offset = Vector2(0, 15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcw72"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.02745098, 0.03529412, 0.039215688, 1)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53uoo"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_color = Color(0.02745098, 0.03529412, 0.039215688, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghglp"]
content_margin_left = 14.0
content_margin_top = 4.0
content_margin_right = 14.0
content_margin_bottom = 4.0
bg_color = Color(0.02745098, 0.03529412, 0.039215688, 1)
border_width_top = 2
border_color = Color(1, 1, 1, 0.75)
corner_detail = 1
expand_margin_top = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4op41"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="RoomConfigForm" type="Control"]
custom_minimum_size = Vector2(960, 960)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bgtom")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bgtom")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_selected_color = Color(0.87481856, 0.6958405, 0.6319951, 1)
theme_override_colors/font_unselected_color = Color(0.02745098, 0.03529412, 0.039215688, 1)
theme_override_constants/side_margin = 12
theme_override_constants/tab_separation = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_bcw72")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_53uoo")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_ghglp")
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_4op41")
current_tab = 0

[node name="Room Config" type="ScrollContainer" parent="Panel/MarginContainer/TabContainer"]
layout_mode = 2
theme = ExtResource("2_7shhj")
horizontal_scroll_mode = 3
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Room Config"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HeadingRoomConfig" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("2_r5ufs")]
layout_mode = 2

[node name="Label" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer/HeadingRoomConfig" index="0"]
text = "VISIBILITY"

[node name="ToggleShowNoise" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_bcw72")]
unique_name_in_owner = true
layout_mode = 2

[node name="ToggleShowBorder" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_bcw72")]
unique_name_in_owner = true
layout_mode = 2

[node name="ToggleShowFloor" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_bcw72")]
unique_name_in_owner = true
layout_mode = 2

[node name="ToggleShowOuterWalls" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_bcw72")]
unique_name_in_owner = true
layout_mode = 2

[node name="HeadingNoise" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("2_r5ufs")]
layout_mode = 2

[node name="Label" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer/HeadingNoise" index="0"]
text = "NOISE OPTIONS"

[node name="ToggleNormalize" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_bcw72")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatIsoValue" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatNoiseFloor" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatNoiseCeil" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatCurve" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatTiltY" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatTiltX" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="FloatTiltZ" parent="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer" instance=ExtResource("3_qr8kv")]
unique_name_in_owner = true
layout_mode = 2

[node name="Base Noise" type="ScrollContainer" parent="Panel/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_7shhj")
horizontal_scroll_mode = 3
metadata/_tab_index = 1

[node name="BaseNoiseForm" parent="Panel/MarginContainer/TabContainer/Base Noise" instance=ExtResource("5_p11vx")]
unique_name_in_owner = true
layout_mode = 2

[node name="Border Noise" type="ScrollContainer" parent="Panel/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_7shhj")
horizontal_scroll_mode = 3
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Border Noise"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HeadingRoomConfig" parent="Panel/MarginContainer/TabContainer/Border Noise/VBoxContainer" instance=ExtResource("2_r5ufs")]
layout_mode = 2

[node name="Label" parent="Panel/MarginContainer/TabContainer/Border Noise/VBoxContainer/HeadingRoomConfig" index="0"]
text = "BORDER NOISE"

[editable path="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer/HeadingRoomConfig"]
[editable path="Panel/MarginContainer/TabContainer/Room Config/VBoxContainer/HeadingNoise"]
[editable path="Panel/MarginContainer/TabContainer/Border Noise/VBoxContainer/HeadingRoomConfig"]
